--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<h2>Introducing The Lads</h2>
 						</header>
 						<p>We are Seb Jensen and Damian Rusecki from St Helena School, Colchester - Team 8346A, The Lads. We need your help to represent Essex and the UK at the world's most prestigious robotics event - the 2022 VEX Robotics World Championship presented by Northrop Grumman Foundation in Dallas, Texas, from 5-7 May. Recognised as one of the UK's top VEX Robotics Competition teams for exemplary engineering, we're determined to take the trip to the USA to show the world what we're all about.</p>
+						<li><a href="https://www.gofundme.com/f/help-the-lads-represent-the-uk-at-vex-worlds" class="button primary scrolly">Support us on GoFundMe</a></li>
 					</div>
 					<a href="#vex" class="goto-next scrolly">Next</a>
 				</div>
