--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="container">
 					<ul class="actions special">
 						<li><a href="https://www.gofundme.com/f/help-the-lads-represent-the-uk-at-vex-worlds" class="button primary scrolly">GoFundMe</a></li>
-                        <li><a href="#" class="button primary scrolly" data-token="d00b467513e4d6a07f8dda1bd06925df" onclick="mjOpenPopin(event, this)">Newsletter</a></li>
+                        <li><a href="http://newsletter.thelads.uk" class="button primary scrolly" target="_blank">Newsletter</a></li>
 					</ul>
 				</div>
 			</section>
@@ -101,7 +101,7 @@
 					</header>
 					<ul class="actions special">
 						<li><a href="https://newsroom.thelads.uk" class="button primary scrolly">Press Releases</a></li>
-                        			<li><a href="https://newsletter.thelads.uk" target="_blank" class="button primary scrolly">Newsletter</a></li>
+                        			<li><a href="http://newsletter.thelads.uk" class="button primary scrolly" target="_blank">Newsletter</a></li>
 					</ul>
 					<p>Want to get in touch? Send us an email at<br><a href="mailto:team@thelads.uk">team@thelads.uk</a></p>
 				</div>
