--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
 				</div>
 			</section>
 
+            <section id="contributors" class="main special">
+				<div class="container">
+                    <div class="content">
+                        <header class="major">
+							<h2>Contributors</h2>
+						</header>
+						<img src="images/jamesdysonfoundation.jpg" width="80%" alt="The James Dyson Foundation">
+					<a href="#footer" class="goto-next scrolly">Next</a>
+                    </div>
+				</div>
+			</section>
+        
 			<section id="gallery" class="main special">
 				<div class="container">
 					<div class="content">
